update groundedness prompt in QA eval flow
* update groundedness prompt template in QA eval flow
* correct settings in both flow.dag.yaml files
* fix spelling typos

--- a/examples/flows/evaluation/eval-qna-rag-metrics/rag_retrieval_prompt.jinja2
+++ b/examples/flows/evaluation/eval-qna-rag-metrics/rag_retrieval_prompt.jinja2
@@ -10,7 +10,7 @@ Think through step by step:
 - Summarize each given document first
 - Determine the underlying intent of the given question, when the question is ambiguous, refer to the given chat history 
 - Measure how suitable each document to the given question, list the document id and the corresponding relevance score. 
-- Summarize the overall relevance of given list of documents to the given question after # Overall Reason, note that the answer to the question can soley from single document or a combination of multiple documents. 
+- Summarize the overall relevance of given list of documents to the given question after # Overall Reason, note that the answer to the question can solely from single document or a combination of multiple documents. 
 - Finally, output "# Result" followed by a score from 1 to 5.
 
 # Question
