fix groundedness prompt in rai qna rag eval flow

--- a/examples/flows/evaluation/eval-qna-rag-metrics/rag_groundedness_prompt.jinja2
+++ b/examples/flows/evaluation/eval-qna-rag-metrics/rag_groundedness_prompt.jinja2
@@ -9,7 +9,7 @@ To rate the groundness of chat response, follow the below steps:
 1. Review the chat history to understand better about the question and chat response
 2. Look for all the factual information in chatbot's response 
 3. Compare the factual information in chatbot's response with the retrieved documents. Check if there are any facts that are not in the retrieved documents at all,or that contradict or distort the facts in the retrieved documents. If there are, write them down. If there are none, leave it blank. Note that some facts may be implied or suggested by the retrieved documents, but not explicitly stated. In that case, use your best judgment to decide if the fact is grounded or not. 
-   For example, if the retrieved documents mention that a film was nominated for 12 Oscars, and chatbot's reply states the same, you can consider that fact as grounded, as it is directly taken from the retrieved documents. 
+   For example, if the retrieved documents mention that a film was nominated for 12 awards, and chatbot's reply states the same, you can consider that fact as grounded, as it is directly taken from the retrieved documents. 
    However, if the retrieved documents do not mention the film won any awards at all, and chatbot reply states that the film won some awards, you should consider that fact as not grounded.
 4. Rate how well grounded the chatbot response is on a Likert scale from 1 to 5 judging if chatbot response has no ungrounded facts. (higher better)
    5: agree strongly
