--- a/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run_gpt4.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run_gpt4.yml.jinja2
@@ -16,7 +16,7 @@
     export test_workspace_rg=${{ '{{' }} secrets.TEST_WORKSPACE_RG }}
     export test_workspace_name=${{ '{{' }} secrets.TEST_WORKSPACE_NAME_CANARY }}
     bash bash_script.sh
-- name: Run scripts against production workspace (scheduled runs only)
+- name: Run scripts against production workspace
   if: github.event_name != 'schedule'
   working-directory: {{ working_dir }}
   run: |
