--- a/scripts/readme/ghactions_driver/workflow_templates/flow_in_pipeline.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_templates/flow_in_pipeline.yml.jinja2
@@ -4,6 +4,12 @@ runs-on: ubuntu-latest
 steps:
   - name: Checkout repository
     uses: actions/checkout@v4
+  - name: Generate config.json for canary workspace (scheduled runs only)
+    if: github.event_name == 'schedule'
+    run: echo '${{ '{{' }} secrets.TEST_WORKSPACE_CONFIG_JSON_CANARY }}' > ${{ '{{' }} github.workspace }}/examples/config.json
+  - name: Generate config.json for production workspace
+    if: github.event_name != 'schedule'
+    run: echo '${{ '{{' }} secrets.EXAMPLE_WORKSPACE_CONFIG_JSON_PROD }}' > ${{ '{{' }} github.workspace }}/examples/config.json
   - name: Azure Login
     uses: azure/login@v1
     with:
@@ -19,12 +25,10 @@ steps:
       pip install -r ${{ '{{' }} github.workspace }}/examples/dev_requirements.txt
   - name: Create Aoai Connection
     run: pf connection create -f ${{ '{{' }} github.workspace }}/examples/connections/azure_openai.yml --set api_key="${{ '{{' }} secrets.AOAI_API_KEY_TEST }}" api_base="${{ '{{' }} secrets.AOAI_API_ENDPOINT_TEST }}"
-  - name: Create new Aoai Connection
-    run: pf connection create -f ${{ '{{' }} github.workspace }}/examples/connections/azure_openai.yml --set api_key="${{ '{{' }} secrets.AOAI_API_KEY_TEST }}" api_base="${{ '{{' }} secrets.AOAI_API_ENDPOINT_TEST }}" name=new_ai_connection
   - name: Test Notebook
     working-directory: {{ gh_working_dir }}
     run: |
-      papermill -k python {{ name }}.ipynb {{ name }}.output.ipynb -p api_key ${{ '{{' }} secrets.AOAI_API_KEY_TEST }} -p api_base ${{ '{{' }} secrets.AOAI_API_ENDPOINT_TEST }} -p api_version 2023-07-01-preview
+      papermill -k python {{ name }}.ipynb {{ name }}.output.ipynb
   - name: Upload artifact
     if: ${{ '{{' }} always() }}
     uses: actions/upload-artifact@v3
