--- a/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run_gpt4.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run_gpt4.yml.jinja2
@@ -10,8 +10,8 @@
   if: github.event_name == 'schedule'
   working-directory: {{ working_dir }}
   run: |
-    export aoai_api_key=${{ '{{' }}secrets.AOAI_API_KEY_TEST }}
-    export aoai_api_endpoint=${{ '{{' }} secrets.AOAI_API_ENDPOINT_TEST }}
+    export aoai_api_key=${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}
+    export aoai_api_endpoint=${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}
     export test_workspace_sub_id=${{ '{{' }} secrets.TEST_WORKSPACE_SUB_ID }}
     export test_workspace_rg=${{ '{{' }} secrets.TEST_WORKSPACE_RG }}
     export test_workspace_name=${{ '{{' }} secrets.TEST_WORKSPACE_NAME_CANARY }}
@@ -20,8 +20,8 @@
   if: github.event_name != 'schedule'
   working-directory: {{ working_dir }}
   run: |
-    export aoai_api_key=${{ '{{' }}secrets.AOAI_API_KEY_TEST }}
-    export aoai_api_endpoint=${{ '{{' }} secrets.AOAI_API_ENDPOINT_TEST }}
+    export aoai_api_key=${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}
+    export aoai_api_endpoint=${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}
     export test_workspace_sub_id=${{ '{{' }} secrets.TEST_WORKSPACE_SUB_ID }}
     export test_workspace_rg=${{ '{{' }} secrets.TEST_WORKSPACE_RG }}
     export test_workspace_name=${{ '{{' }} secrets.TEST_WORKSPACE_NAME_PROD }}
