--- a/scripts/readme/ghactions_driver/workflow_steps/step_create_env_gpt4.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_steps/step_create_env_gpt4.yml.jinja2
@@ -4,8 +4,5 @@
     AOAI_API_KEY=${{ '{{' }} secrets.AOAI_GPT_4V_KEY }}
     AOAI_API_ENDPOINT=${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}
     AOAI_API_ENDPOINT=$(echo ${AOAI_API_ENDPOINT//\//\\/})
-    if [[ -e .env.example ]]; then
-      echo "env replacement"
-      sed -i -e "s/<your_AOAI_key>/$AOAI_API_KEY/g" -e "s/<your_AOAI_endpoint>/$AOAI_API_ENDPOINT/g" .env.example
-      mv .env.example .env
-    fi
+    cp ../../../connections/azure_openai.yml ./azure_openai.yml
+    sed -i -e "s/<user-input>/$AOAI_API_KEY/g" -e "s/aoai-api-endpoint/$AOAI_API_ENDPOINT/g" azure_openai.yml
