--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -89,8 +89,15 @@
             Execute="deferred"
             ExeCommand="wscript.exe promptflow_service.vbs"
             Return="asyncNoWait" />
+        <CustomAction Id="Clean_Custom_Files_After_Uninstall"
+            Directory="APPLICATIONFOLDER"
+            Execute="deferred"
+            ExeCommand="cmd.exe /c del /q *"
+            Return="ignore" />
+
         <InstallExecuteSequence>
             <Custom Action="StartPromptFlowService" Before="InstallFinalize">NOT Installed OR WIX_UPGRADE_DETECTED</Custom>
+            <Custom Action="Clean_Custom_Files_After_Uninstall" Before="RemoveFolder">REMOVE="ALL"</Custom>
         </InstallExecuteSequence>
     </Product>
 
