--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -84,20 +84,35 @@
           <Custom Action="Set_WIXUI_EXITDIALOGOPTIONALTEXT" After="CostFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
         </InstallUISequence>
 
+        <CustomAction Id="SetUninstalling" Property="Uninstalling" Value="true"/>
+        <CustomAction Id="SetRemovingForUpgrade" Property="RemovingForUpgrade" Value="true"/>
+<!--         <CustomAction Id="Clean_Custom_Files_After_Uninstall" -->
+<!--             Directory="APPLICATIONFOLDER" -->
+<!--             Execute="deferred" -->
+<!--             ExeCommand="cmd.exe /c rmdir /s /q &quot;[APPLICATIONFOLDER]&quot;" -->
+<!--             Return="ignore" /> -->
+        <CustomAction Id="Clean_Custom_Files_After_Uninstall"
+            Directory="MyProduct"
+            Execute="commit"
+            Impersonate="no"
+            ExeCommand="cmd.exe /c del /q *"
+            Return="check"/>
+        <InstallExecuteSequence>
+          <Custom Action="SetUninstalling" After="FindRelatedProducts">Installed AND (REMOVE=&quot;ALL&quot;) AND NOT UPGRADINGPRODUCTCODE</Custom>
+          <Custom Action="SetRemovingForUpgrade" After="RemoveExistingProducts">(REMOVE=&quot;ALL&quot;) AND UPGRADINGPRODUCTCODE</Custom>
+          <Custom Action="Clean_Custom_Files_After_Uninstall" Before="RemoveFiles">Uninstalling OR RemovingForUpgrade</Custom>
+<!--           <Custom Action="Clean_Custom_Files_After_Uninstall" Before="RemoveFiles">REMOVE="ALL"</Custom> -->
+
+        </InstallExecuteSequence>
+
         <CustomAction Id="StartPromptFlowService"
             Directory="APPLICATIONFOLDER"
             Execute="deferred"
             ExeCommand="wscript.exe promptflow_service.vbs"
             Return="asyncNoWait" />
-        <CustomAction Id="Clean_Custom_Files_After_Uninstall"
-            Directory="APPLICATIONFOLDER"
-            Execute="deferred"
-            ExeCommand="cmd.exe /c rmdir /s /q &quot;[APPLICATIONFOLDER]&quot;"
-            Return="ignore" />
 
         <InstallExecuteSequence>
             <Custom Action="StartPromptFlowService" Before="InstallFinalize">NOT Installed OR WIX_UPGRADE_DETECTED</Custom>
-            <Custom Action="Clean_Custom_Files_After_Uninstall" Before="RemoveFiles">REMOVE="ALL"</Custom>
         </InstallExecuteSequence>
     </Product>
 
