--- a/scripts/readme/ghactions_driver/workflow_templates/workflow_skeleton.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_templates/workflow_skeleton.yml.jinja2
@@ -16,7 +16,7 @@ env:
   IS_IN_CI_PIPELINE: "true"
 
 jobs:
-  {{ ci_name }}:
+  {{ workflow_name }}:
 {%- filter indent(width=4) -%}
 {% block steps %}
 {% endblock steps %}
