--- a/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run_gpt4.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run_gpt4.yml.jinja2
@@ -7,25 +7,30 @@
   run: |
     cat bash_script.sh
 - name: Run scripts against canary workspace (scheduled runs only)
+  uses: azure/CLI@v2
   if: github.event_name == 'schedule'
-  working-directory: {{ working_dir }}
-  run: |
-    export aoai_api_key=${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}
-    export aoai_api_endpoint=${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}
-    export test_workspace_sub_id=${{ '{{' }} secrets.TEST_WORKSPACE_SUB_ID }}
-    export test_workspace_rg=${{ '{{' }} secrets.TEST_WORKSPACE_RG }}
-    export test_workspace_name=${{ '{{' }} secrets.TEST_WORKSPACE_NAME_CANARY }}
-    bash bash_script.sh
+  with:
+    azcliversion: latest
+    inlineScript: |
+      cd $GITHUB_WORKSPACE/{{ working_dir }}
+      export aoai_api_key=${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}
+      export aoai_api_endpoint=${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}
+      export test_workspace_sub_id=${{ '{{' }} secrets.TEST_WORKSPACE_SUB_ID }}
+      export test_workspace_rg=${{ '{{' }} secrets.TEST_WORKSPACE_RG }}
+      export test_workspace_name=${{ '{{' }} secrets.TEST_WORKSPACE_NAME_CANARY }}
+      bash bash_script.sh
 - name: Run scripts against production workspace
+  uses: azure/CLI@v2
   if: github.event_name != 'schedule'
-  working-directory: {{ working_dir }}
-  run: |
-    export aoai_api_key=${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}
-    export aoai_api_endpoint=${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}
-    export test_workspace_sub_id=${{ '{{' }} secrets.TEST_WORKSPACE_SUB_ID }}
-    export test_workspace_rg=${{ '{{' }} secrets.TEST_WORKSPACE_RG }}
-    export test_workspace_name=${{ '{{' }} secrets.TEST_WORKSPACE_NAME_PROD }}
-    bash bash_script.sh
+  with:
+    azcliversion: latest
+    inlineScript: |
+      export aoai_api_key=${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}
+      export aoai_api_endpoint=${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}
+      export test_workspace_sub_id=${{ '{{' }} secrets.TEST_WORKSPACE_SUB_ID }}
+      export test_workspace_rg=${{ '{{' }} secrets.TEST_WORKSPACE_RG }}
+      export test_workspace_name=${{ '{{' }} secrets.TEST_WORKSPACE_NAME_PROD }}
+      bash bash_script.sh
 - name: Pip List for Debug
   if : ${{ '{{' }} always() }}
   working-directory: {{ working_dir }}
@@ -33,7 +38,7 @@
     pip list
 - name: Upload artifact
   if: ${{ '{{' }} always() }}
-  uses: actions/upload-artifact@v3
+  uses: actions/upload-artifact@v4
   with:
     name: artifact
     path: {{ working_dir }}/bash_script.sh
