--- a/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run.yml.jinja2
@@ -12,6 +12,7 @@
   with:
     azcliversion: latest
     inlineScript: |
+      cd $GITHUB_WORKSPACE/{{ working_dir }}
       export aoai_api_key=${{ '{{' }}secrets.AOAI_API_KEY_TEST }}
       export aoai_api_endpoint=${{ '{{' }} secrets.AOAI_API_ENDPOINT_TEST }}
       export AZURE_OPENAI_API_KEY=${{ '{{' }}secrets.AOAI_API_KEY_TEST }}
@@ -25,6 +26,7 @@
   with:
     azcliversion: latest
     inlineScript: |
+      cd $GITHUB_WORKSPACE/{{ working_dir }}
       export aoai_api_key=${{ '{{' }}secrets.AOAI_API_KEY_TEST }}
       export aoai_api_endpoint=${{ '{{' }} secrets.AOAI_API_ENDPOINT_TEST }}
       export AZURE_OPENAI_API_KEY=${{ '{{' }}secrets.AOAI_API_KEY_TEST }}
