--- a/scripts/readme/ghactions_driver/workflow_steps/step_azure_login.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_steps/step_azure_login.yml.jinja2
@@ -4,3 +4,4 @@
     subscription-id: ${{ '{{' }}secrets.AZURE_SUBSCRIPTION_ID}}
     tenant-id: ${{ '{{' }}secrets.AZURE_TENANT_ID}}
     client-id: ${{ '{{' }}secrets.AZURE_CLIENT_ID}}
+    enable-AzPSSession: true
