--- a/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run_gpt4.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run_gpt4.yml.jinja2
@@ -7,10 +7,10 @@
   run: |
     cat bash_script.sh
 - name: Run scripts against canary workspace (scheduled runs only)
-  uses: azure/CLI@v2
+  uses: azure/powershell@v1
   if: github.event_name == 'schedule'
   with:
-    azcliversion: latest
+    azPSVersion: "latest"
     inlineScript: |
       cd $GITHUB_WORKSPACE/{{ working_dir }}
       export aoai_api_key=${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}
@@ -20,10 +20,10 @@
       export test_workspace_name=${{ '{{' }} secrets.TEST_WORKSPACE_NAME_CANARY }}
       bash bash_script.sh
 - name: Run scripts against production workspace
-  uses: azure/CLI@v2
+  uses: azure/powershell@v1
   if: github.event_name != 'schedule'
   with:
-    azcliversion: latest
+    azPSVersion: "latest"
     inlineScript: |
       export aoai_api_key=${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}
       export aoai_api_endpoint=${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}
