--- a/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run.yml.jinja2
@@ -7,10 +7,10 @@
   run: |
     cat bash_script.sh
 - name: Run scripts against canary workspace (scheduled runs only)
-  uses: azure/CLI@v2
+  uses: azure/powershell@v1
   if: github.event_name == 'schedule'
   with:
-    azcliversion: latest
+    azPSVersion: "latest"
     inlineScript: |
       cd $GITHUB_WORKSPACE/{{ working_dir }}
       export aoai_api_key=${{ '{{' }}secrets.AOAI_API_KEY_TEST }}
@@ -21,10 +21,10 @@
       export test_workspace_rg=${{ '{{' }} secrets.TEST_WORKSPACE_RG }}
       export test_workspace_name=${{ '{{' }} secrets.TEST_WORKSPACE_NAME_CANARY }}
 - name: Run scripts against production workspace
-  uses: azure/CLI@v2
+  uses: azure/powershell@v1
   if: github.event_name != 'schedule'
   with:
-    azcliversion: latest
+    azPSVersion: "latest"
     inlineScript: |
       cd $GITHUB_WORKSPACE/{{ working_dir }}
       export aoai_api_key=${{ '{{' }}secrets.AOAI_API_KEY_TEST }}
