--- a/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run_gpt4.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run_gpt4.yml.jinja2
@@ -13,11 +13,11 @@
     azPSVersion: "latest"
     inlineScript: |
       cd $Env:GITHUB_WORKSPACE/{{ working_dir }}
-      $Env:aoai_api_key=${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}
-      $Env:aoai_api_endpoint=${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}
-      $Env:test_workspace_sub_id=${{ '{{' }} secrets.TEST_WORKSPACE_SUB_ID }}
-      $Env:test_workspace_rg=${{ '{{' }} secrets.TEST_WORKSPACE_RG }}
-      $Env:test_workspace_name=${{ '{{' }} secrets.TEST_WORKSPACE_NAME_CANARY }}
+      $Env:aoai_api_key='${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}'
+      $Env:aoai_api_endpoint='${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}'
+      $Env:test_workspace_sub_id='${{ '{{' }} secrets.TEST_WORKSPACE_SUB_ID }}'
+      $Env:test_workspace_rg='${{ '{{' }} secrets.TEST_WORKSPACE_RG }}'
+      $Env:test_workspace_name='${{ '{{' }} secrets.TEST_WORKSPACE_NAME_CANARY }}'
       bash bash_script.sh
 - name: Run scripts against production workspace
   uses: azure/powershell@v1
@@ -26,11 +26,11 @@
     azPSVersion: "latest"
     inlineScript: |
       cd $Env:GITHUB_WORKSPACE/{{ working_dir }}
-      $Env:aoai_api_key=${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}
-      $Env:aoai_api_endpoint=${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}
-      $Env:test_workspace_sub_id=${{ '{{' }} secrets.TEST_WORKSPACE_SUB_ID }}
-      $Env:test_workspace_rg=${{ '{{' }} secrets.TEST_WORKSPACE_RG }}
-      $Env:test_workspace_name=${{ '{{' }} secrets.TEST_WORKSPACE_NAME_PROD }}
+      $Env:aoai_api_key='${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}'
+      $Env:aoai_api_endpoint='${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}'
+      $Env:test_workspace_sub_id='${{ '{{' }} secrets.TEST_WORKSPACE_SUB_ID }}'
+      $Env:test_workspace_rg='${{ '{{' }} secrets.TEST_WORKSPACE_RG }}'
+      $Env:test_workspace_name='${{ '{{' }} secrets.TEST_WORKSPACE_NAME_PROD }}'
       bash bash_script.sh
 - name: Pip List for Debug
   if : ${{ '{{' }} always() }}
