--- a/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run_gpt4.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_steps/step_extract_steps_and_run_gpt4.yml.jinja2
@@ -7,31 +7,25 @@
   run: |
     cat bash_script.sh
 - name: Run scripts against canary workspace (scheduled runs only)
-  uses: azure/powershell@v1
   if: github.event_name == 'schedule'
-  with:
-    azPSVersion: "latest"
-    inlineScript: |
-      cd $Env:GITHUB_WORKSPACE/{{ working_dir }}
-      $Env:aoai_api_key='${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}'
-      $Env:aoai_api_endpoint='${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}'
-      $Env:test_workspace_sub_id='${{ '{{' }} secrets.TEST_WORKSPACE_SUB_ID }}'
-      $Env:test_workspace_rg='${{ '{{' }} secrets.TEST_WORKSPACE_RG }}'
-      $Env:test_workspace_name='${{ '{{' }} secrets.TEST_WORKSPACE_NAME_CANARY }}'
-      bash bash_script.sh
+  working-directory: {{ working_dir }}
+  run: |
+    export aoai_api_key=${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}
+    export aoai_api_endpoint=${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}
+    export test_workspace_sub_id=${{ '{{' }} secrets.TEST_WORKSPACE_SUB_ID }}
+    export test_workspace_rg=${{ '{{' }} secrets.TEST_WORKSPACE_RG }}
+    export test_workspace_name=${{ '{{' }} secrets.TEST_WORKSPACE_NAME_CANARY }}
+    bash bash_script.sh
 - name: Run scripts against production workspace
-  uses: azure/powershell@v1
   if: github.event_name != 'schedule'
-  with:
-    azPSVersion: "latest"
-    inlineScript: |
-      cd $Env:GITHUB_WORKSPACE/{{ working_dir }}
-      $Env:aoai_api_key='${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}'
-      $Env:aoai_api_endpoint='${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}'
-      $Env:test_workspace_sub_id='${{ '{{' }} secrets.TEST_WORKSPACE_SUB_ID }}'
-      $Env:test_workspace_rg='${{ '{{' }} secrets.TEST_WORKSPACE_RG }}'
-      $Env:test_workspace_name='${{ '{{' }} secrets.TEST_WORKSPACE_NAME_PROD }}'
-      bash bash_script.sh
+  working-directory: {{ working_dir }}
+  run: |
+    export aoai_api_key=${{ '{{' }}secrets.AOAI_GPT_4V_KEY }}
+    export aoai_api_endpoint=${{ '{{' }} secrets.AOAI_GPT_4V_ENDPOINT }}
+    export test_workspace_sub_id=${{ '{{' }} secrets.TEST_WORKSPACE_SUB_ID }}
+    export test_workspace_rg=${{ '{{' }} secrets.TEST_WORKSPACE_RG }}
+    export test_workspace_name=${{ '{{' }} secrets.TEST_WORKSPACE_NAME_PROD }}
+    bash bash_script.sh
 - name: Pip List for Debug
   if : ${{ '{{' }} always() }}
   working-directory: {{ working_dir }}
