--- a/examples/flows/chat/use_tools_with_chat_models/use_tools_with_chat_models.jinja2
+++ b/examples/flows/chat/use_tools_with_chat_models/use_tools_with_chat_models.jinja2
@@ -11,7 +11,7 @@ Don't make assumptions about what values to plug into functions. Ask for clarifi
 {{item.outputs.llm_output.tool_calls}}
 
 {% for tool_call_item in item.outputs.llm_output.tool_calls %}
-# tooll:
+# tool:
 ## tool_call_id:
 {{tool_call_item.id}}
 ## content:
