--- a/scripts/readme/ghactions_driver/workflow_steps/step_azure_login.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_steps/step_azure_login.yml.jinja2
@@ -1,3 +1,8 @@
+- name: Random Wait
+  uses: AliSajid/random-wait-action@v1
+  with:
+    minimum: 0
+    maximum: 10
 - name: {{ step_name }}
   uses: azure/login@v1
   with:
