--- a/scripts/readme/ghactions_driver/workflow_templates/workflow_config_json.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_templates/workflow_config_json.yml.jinja2
@@ -23,6 +23,11 @@ steps:
       pip install -r ${{ '{{' }} github.workspace }}/examples/dev_requirements.txt
   - name: Create Aoai Connection
     run: pf connection create -f ${{ '{{' }} github.workspace }}/examples/connections/azure_openai.yml --set api_key="${{ '{{' }} secrets.AOAI_API_KEY_TEST }}" api_base="${{ '{{' }} secrets.AOAI_API_ENDPOINT_TEST }}"
+  - name: Random Wait
+    uses: AliSajid/random-wait-action@v1
+    with:
+      minimum: 1
+      maximum: 10
   - name: Azure Login
     uses: azure/login@v1
     with:
