--- a/scripts/readme/ghactions_driver/workflow_steps/step_azure_login.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_steps/step_azure_login.yml.jinja2
@@ -1,5 +1,5 @@
 - name: Random Wait
-  uses: AliSajid/random-wait-action@v1
+  uses: AliSajid/random-wait-action@main
   with:
     minimum: 0
     maximum: 10
