--- a/scripts/readme/ghactions_driver/workflow_templates/autogen_workflow.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_templates/autogen_workflow.yml.jinja2
@@ -44,11 +44,22 @@ steps:
       minimum: 1
       maximum: 300
   - name: Azure Login
-    uses: azure/login@v1
+    uses: azure/login@v2
     with:
       subscription-id: ${{ '{{' }}secrets.AZURE_SUBSCRIPTION_ID}}
       tenant-id: ${{ '{{' }}secrets.AZURE_TENANT_ID}}
       client-id: ${{ '{{' }}secrets.AZURE_CLIENT_ID}}
+  - name: Fetch OID token every 4 mins
+    shell: bash
+    run: |
+      while true; do
+        token_request=$ACTIONS_ID_TOKEN_REQUEST_TOKEN
+        token_uri=$ACTIONS_ID_TOKEN_REQUEST_URL
+        token=$(curl -H "Authorization: bearer $token_request" "${token_uri}&audience=api://AzureADTokenExchange" | jq .value -r)
+        az login --service-principal -u ${{ '{{' }}secrets.AZURE_CLIENT_ID}} -t ${{ '{{' }}secrets.AZURE_TENANT_ID}} --federated-token $token --output none
+        # Sleep for 4 minutes
+        sleep 240
+      done &
   - name: Test Notebook
     working-directory: {{ gh_working_dir }}
     run: |
