--- a/src/promptflow-devkit/promptflow/_cli/data/chat_flow/template/flow.dag.yaml.jinja2
+++ b/src/promptflow-devkit/promptflow/_cli/data/chat_flow/template/flow.dag.yaml.jinja2
@@ -14,17 +14,17 @@ outputs:
     is_chat_output: true
 nodes:
 - name: chat
-  type: llm
+  type: custom_llm
   source:
-    type: code
+    type: package_with_prompt
+    tool: promptflow.tools.llm.llm
     path: chat.jinja2
   inputs:
+    connection: {{ connection }}
+    api: chat
     deployment_name: {{ deployment }}
-    max_tokens: '256'
-    temperature: '0.7'
+    temperature: 0.7
     chat_history: ${inputs.chat_history}
     question: ${inputs.question}
-  api: chat
-  connection: {{ connection }}
 environment:
   python_requirements_txt: requirements.txt
