--- a/scripts/readme/ghactions_driver/readme_templates/tutorial_index.md.jinja2
+++ b/scripts/readme/ghactions_driver/readme_templates/tutorial_index.md.jinja2
@@ -6,3 +6,5 @@ This section contains a collection of flow samples and step-by-step tutorials.
 |--|--|--|
 {% for item in items %}|{{ item.category }}|[{{ item.title }}]({{ item.url }})|{{ item.description }}|
 {% endfor %}
+
+Learn more: [Try out more promptflow examples.](https://github.com/microsoft/promptflow/tree/main/examples)
