--- a/examples/flows/integrations/llmlingua-prompt-compression/gsm8k_example/prompt_node.jinja2
+++ b/examples/flows/integrations/llmlingua-prompt-compression/gsm8k_example/prompt_node.jinja2
@@ -1,5 +1,5 @@
 Please reference the following examples to answer the math question,
-{{few_shot_exampls}}
+{{few_shot_examples}}
 
 Questions: {{question}}
 Let's think step by step.
